log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Fri May 15 12:06:44 AM UTC 2026: 
 tests:  0|6
========================================
c02545c
Fri May 15 12:20:23 AM UTC 2026: 
 graph.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:34:42: error: too few arguments to function ‘is_equal_string’
   34 |     new_graph->adjacencyMap = map_create(is_equal_string());
      |                                          ^~~~~~~~~~~~~~~
graph.c:21:5: note: declared here
   21 | int is_equal_string(void *key1, void *key2) {
      |     ^~~~~~~~~~~~~~~
42b0414
Fri May 15 12:20:42 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:34:58: error: expected expression before ‘void’
   34 |     new_graph->adjacencyMap = map_create(is_equal_string(void *key1, void *key2));
      |                                                          ^~~~
graph.c:34:42: error: too few arguments to function ‘is_equal_string’
   34 |     new_graph->adjacencyMap = map_create(is_equal_string(void *key1, void *key2));
      |                                          ^~~~~~~~~~~~~~~
graph.c:21:5: note: declared here
   21 | int is_equal_string(void *key1, void *key2) {
      |     ^~~~~~~~~~~~~~~
c6cb713
Fri May 15 12:21:03 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:34:31: error: too few arguments to function ‘map_create’
   34 |     new_graph->adjacencyMap = map_create();
      |                               ^~~~~~~~~~
In file included from graph.c:8:
map.h:14:6: note: declared here
   14 | Map *map_create(int (*is_equal)(void *key1, void *key2)); // unsorted map
      |      ^~~~~~~~~~
613bc79
Fri May 15 12:29:13 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4e44a58
Fri May 15 12:32:44 AM UTC 2026: 
 graph.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f4c8f30
Fri May 15 12:34:28 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8a22dec
Fri May 15 12:35:56 AM UTC 2026: 
 tests:  0|0
056735e
Fri May 15 12:38:37 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dc23976
Fri May 15 12:42:41 AM UTC 2026: 
 tests:  0|0
10f002d
Fri May 15 12:43:42 AM UTC 2026: 
 tests:  0|0
1f1d2ec
Fri May 15 12:44:50 AM UTC 2026: 
 tests:  0|0
37f2d07
Fri May 15 12:46:50 AM UTC 2026: 
 tests:  0|0
aaf03c0
Fri May 15 12:56:34 AM UTC 2026: 
 graph.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:42:36: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   42 |     if (map_search(g->adjacencyMap,label) != NULL) return;
      |                                    ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:46:5: error: expected ‘,’ or ‘;’ before ‘List’
   46 |     List * new_list = list_create();
      |     ^~~~
graph.c:47:24: error: ‘new_list’ undeclared (first use in this function)
   47 |     if (!label_cpy || !new_list) return;
      |                        ^~~~~~~~
graph.c:47:24: note: each undeclared identifier is reported only once for each function it appears in
graph.c:49:53: error: expected ‘;’ before ‘}’ token
   49 |     map_insert(g->adjacencyMap, label_cpy, new_list)
      |                                                     ^
      |                                                     ;
   50 | }
      | ~                                                    
cc1: all warnings being treated as errors
14c4c43
Fri May 15 12:57:02 AM UTC 2026: 
 graph.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:42:36: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   42 |     if (map_search(g->adjacencyMap,label) != NULL) return;
      |                                    ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
graph.c:51:53: error: expected ‘;’ before ‘}’ token
   51 |     map_insert(g->adjacencyMap, label_cpy, new_list)
      |                                                     ^
      |                                                     ;
   52 | }
      | ~                                                    
cc1: all warnings being treated as errors
2b99fd3
Fri May 15 12:57:08 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:42:36: error: passing argument 2 of ‘map_search’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
   42 |     if (map_search(g->adjacencyMap,label) != NULL) return;
      |                                    ^~~~~
In file included from graph.c:8:
map.h:22:37: note: expected ‘void *’ but argument is of type ‘const char *’
   22 | MapPair *map_search(Map *map, void *key);
      |                               ~~~~~~^~~
cc1: all warnings being treated as errors
b93765d
